MapLargeCluster/maplarge_deprecated_use_terraform.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: maplarge_application
    role: balancer
  name: maplarge-service
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: maplarge_application
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: maplarge
spec:
  selector:
    app: maplarge_application
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: maplarge-master-ss
  labels:
    app: maplarge_application
    role: master
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  selector:
    matchLabels:
      app: maplarge_application
      role: master
  serviceName: maplarge
  template:
    metadata:
      labels:
        app: maplarge_application
        role: master
    spec:
      imagePullSecrets:
        - name: ml-docker-secret
      terminationGracePeriodSeconds: 120
      securityContext:
        fsGroup: 1000
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: maplarge-master-storage
          persistentVolumeClaim:
            claimName: maplarge-master-claim
      containers:
        - name: maplarge-master-container
          image: docker.io/maplarge/server-netcore:ubuntu-xenial
          resources:
            requests:
              memory: "50Gi"
              cpu: "15"
            limits:
              memory: "55Gi"
              cpu: "15"
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /version.txt
              port: 80
            initialDelaySeconds: 120
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 12 #after 1 minutes, we mark pod unready
          readinessProbe:
            httpGet:
              path: /ServerSync/CheckPlayback
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 60 #after 5 minutes, we mark pod unready
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /opt/maplarge/App_Data
              name: maplarge-master-storage
  volumeClaimTemplates:
    - metadata:
        name: maplarge-master-storage
      spec:
        storageClassName: maplarge-ssd-storage
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 50Gi
